# rcoder

./: .dockerignore  .gitignore  .gitmodules  .plan.md  ACP_IMPLEMENTATION_GUIDE.md  ACP_IMPLEMENTATION_SUMMARY.md  ACP_PROXY_USAGE.md  AGENT_REFACTOR.md  API_KEY_BASE_URL_SUMMARY.md  CLAUDE.md  CLAUDE_CODE_ACP_INTEGRATION.md  CLAUDE_CODE_ARCHITECTURE.md  CUSTOM_MODEL_CONFIGURATION.md  Cargo.toml  DASHMAP_MIGRATION_SUMMARY.md  DOCKER_PLATFORM_CONFIG.md  DOMESTIC_MODEL_INTEGRATION.md  GEMINI.md  GRPC_OPTIMIZATION_SUMMARY.md  HTTP_API_GUIDE.md  HTTP_RESULT_INTEGRATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION_SUMMARY.md  MODEL_CONFIGURATION.md  MULTIPART_CHAT_IMPLEMENTATION.md  Makefile  PLAN_ACP_INTEGRATION.md  PLAN_ARCHITECTURE_REFACTOR_SUMMARY.md  PLAN_SSE_IMPLEMENTATION_SUMMARY.md  PLAN_SSE_UNIFICATION.md  PROGRESS_EVENT_TYPE_REFACTOR.md  PROJECT_ID_AUTO_GENERATION_SUMMARY.md  PROJECT_OVERVIEW.md  PROXY_USAGE.md  RCODER_SERVICE_SUMMARY.md  README.md  README_EN.md  REFACTORING_SUMMARY.md  STREAM_UPDATE_BRIDGE_ANALYSIS.md  (+51 more)
crates/acp_adapter/: Cargo.toml
crates/acp_adapter/src/: capability.rs  config.rs  connection.rs  handle.rs  lib.rs  mcp.rs  mention.rs  permission.rs  plan.rs  process.rs  session.rs  types.rs
crates/acp_thread/: Cargo.toml
crates/agent_abstraction/: Cargo.toml
crates/agent_abstraction/src/: context.rs  error.rs  instance.rs  lib.rs  mirror_env.rs  path_env.rs  process.rs  types.rs
crates/agent_abstraction/src/acp/: config.rs  connection.rs  connection_builder.rs  (+2 more)
crates/agent_config/: Cargo.toml
crates/agent_config/configs/: computer_agent_default.json  default_agents.json
crates/agent_config/examples/: agents.json
crates/agent_config/src/: lib.rs
crates/agent_runner/: Cargo.toml
crates/agent_runner/src/: agent_runtime.rs  agent_worker_manager.rs  api_key_manager.rs  auto_reload.rs  config.rs  lib.rs  main.rs  model.rs  process_reaper.rs  profiler.rs  router.rs  shutdown.rs
crates/agent_runner/tests/: concurrency_raii_test.rs  request_tracking_test.rs  timeout_protection_test.rs  worker_isolation_test.rs
crates/agent_server/: Cargo.toml  README.md  docker-entrypoint.sh
crates/agent_server/examples/: docker_agent_integration.rs
crates/agent_server/src/: agent.rs  api.rs  config.rs  lib.rs  main.rs  models.rs  server.rs  shutdown.rs
crates/ai-agents/: Cargo.toml  README.md
crates/ai-agents/src/: lib.rs
crates/claude/: Cargo.toml
crates/claude-code-agent/: Cargo.toml
crates/claude-code-agent/src/: main.rs  util.rs
crates/claude/src/: agent.rs  connection.rs  lib.rs  main.rs  util.rs
crates/claude_integration/: Cargo.toml
crates/claude_integration/src/: lib.rs  project_builder.rs  template_manager.rs
crates/codex/: Cargo.toml
crates/codex-acp-agent/: Cargo.toml
crates/codex-acp-agent/src/: agent.rs  install.rs  lib.rs  main.rs
crates/codex/src/: agent.rs  lib.rs  main.rs
crates/container-runtime-api/: Cargo.toml
crates/container-runtime-api/src/: lib.rs  runtime_trait.rs
crates/docker_manager/: Cargo.toml  README.md
crates/docker_manager/examples/: basic_usage.rs
crates/docker_manager/src/: container_self_inspector.rs  container_state_actor.rs  container_stop.rs  docker_agent.rs  image_selector.rs  lib.rs  manager.rs  port_manager.rs  runtime_selection.rs  types.rs  utils.rs
crates/docker_manager/tests/: actor_test.rs
crates/duckdb_manager/: Cargo.toml
crates/duckdb_manager/src/: connection.rs  error.rs  lib.rs  manager.rs  models.rs  schema.rs  storage.rs
crates/examples/: Cargo.toml
crates/examples/examples/: model_configuration.rs
crates/examples/src/: lib.rs
crates/http_server/: Cargo.toml
crates/http_server/src/: handlers.rs  http_agent.rs  http_interface.rs  lib.rs  lib_test.rs  middleware.rs
crates/nuwax_parser/: Cargo.toml  README.md
crates/nuwax_parser/examples/: library_usage.rs  read_project.rs  v0_data_sync.rs
crates/nuwax_parser/src/: lib.rs  parsing.rs  sync.rs  types.rs  utils.rs
crates/pingora-proxy/: Cargo.toml  config.yml
crates/pingora-proxy/src/: config.rs  lib.rs  pingora_server.rs  router.rs  server.rs  service.rs
crates/project_manager/: Cargo.toml
crates/project_manager/migrations/: 001_initial.sql
crates/project_manager/src/: database.rs  lib.rs  project_store.rs
crates/rcoder/: Cargo.toml
crates/rcoder-cli/: Cargo.toml
crates/rcoder-cli/src/: cli.rs  diagnostics.rs  main.rs
crates/rcoder-proxy/: Cargo.toml
crates/rcoder-proxy/src/: config.rs  lib.rs  pingora_server.rs  protocol_convert.rs  router.rs  server.rs  service.rs  tests.rs  vnc_resolver.rs
crates/rcoder-telemetry/: Cargo.toml
crates/rcoder-telemetry/src/: config.rs  lib.rs  otlp.rs  prometheus.rs  propagation.rs
crates/rcoder/examples/: agent_selection_example.rs  multimedia_chat_example.rs
crates/rcoder/src/: acp_client.rs  acp_multipart_chat.rs  background_tasks.rs  bootstrap.rs  codex_agent_client.rs  config.rs  config_watcher.rs  docker_init.rs  http_result.rs  lib.rs  main.rs  multipart_chat.rs  plan_api.rs  progress_events.rs  proxy_agent_manager.rs  proxy_agent_manager_old.rs  proxy_init.rs  rcoder_default.yml  router.rs  server.rs  shutdown.rs
crates/rcoder/tests/: container_path_test.rs  docker_agent_integration.rs  proxy_agent_manager_tests.rs
crates/shared_types/: Cargo.toml  build.rs
crates/shared_types/locales/: en-US.yml  zh-CN.yml  zh-TW.yml
crates/shared_types/proto/: agent.proto
crates/shared_types/src/: agent_http_service.rs  agent_types.rs  api_key_validator.rs  chat_agent_config.rs  computer_agent_types.rs  constants.rs  error_codes.rs  flexible_string.rs  grpc_mask.rs  grpc_wrapper.rs  http_handlers.rs  i18n.rs  i18n_extractors.rs  isolation_type.rs  lib.rs  multi_image_config.rs  permission_types.rs  rcoder_agent_types.rs  request_locale.rs  service_config.rs  service_type.rs  validation.rs
examples/: Cargo.toml  acp_config_with_protection.rs  agent_usage.rs  claude_acp_example.rs  claude_code_acp_example.rs  custom_model_example.rs  domestic_model_example.rs  model_configuration.rs  real_acp_example.rs  simple_acp_test.rs
(+1042 files in other folders)
