[workspace]
members = [
    "crates/*",
]
exclude = [
    "tmp/*",
]
resolver = "2"

[workspace.lints]
rustdoc.unbroken_backticks = "warn"
rustdoc.redundant_explicit_links = "warn"
rust.unused_lifetimes = "warn"
rust.unused_qualifications = "warn"
rust.variant_size_differences = "warn"
rust.allow_leading_underscore = "warn"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
# ACP Protocol
agent-client-protocol = "0.4"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
smol = "2.0"

# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json_lenient = "0.1"
schemars = { version = "0.8", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
env_logger = "0.11"

# UUID
uuid = { version = "1.0", features = ["serde", "v4","v7"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# File system watching
notify = "8.2"

# File system utilities
tokio-fs = "0.1"
path-clean = "1.0"

# Utilities
dashmap = "6.0"
futures = "0.3"
itertools = "0.14"
collections = "0.2"

# Zed dependencies
util = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "util" }
settings = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "settings" }
gpui = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "gpui" }
ui = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "ui" }
language = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "language" }
language_model = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "language_model" }
project = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "project" }
fs = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "fs" }
editor = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "editor" }
terminal = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "terminal" }
task = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "task" }
markdown = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "markdown" }
text = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "text" }
url = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "url" }
paths = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "paths" }
watch = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "watch" }
workspace-hack = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "workspace-hack" }
buffer_diff = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "buffer_diff" }
action_log = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "action_log" }
client = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "client" }
context_server = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "context_server" }
language_models = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "language_models" }
prompt_store = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "prompt_store" }
http_client = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "http_client" }
rpc = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "rpc" }
remote = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "remote" }
git = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "git" }
lsp = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "lsp" }
node_runtime = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "node_runtime" }
worktree = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "worktree" }
db = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "db" }
sqlez = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "sqlez" }
telemetry = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "telemetry" }
portable-pty = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "portable-pty" }
file_icons = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "file_icons" }
assistant_context = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "assistant_context" }
assistant_tool = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "assistant_tool" }
assistant_tools = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "assistant_tools" }
cloud_llm_client = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "cloud_llm_client" }
html_to_markdown = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "html_to_markdown" }
web_search = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "web_search" }
zed_env_vars = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "zed_env_vars" }
agent_settings = { path = "crates/agent_settings" }
acp_thread = { path = "crates/acp_thread" }
agent_servers = { path = "crates/agent_servers" }
acp_tools = { path = "crates/acp_tools" }

# Additional utilities
indoc = "2.0"
parking_lot = "0.12"
convert_case = "0.8"
handlebars = { version = "6.0", features = ["rust-embed"] }
rust-embed = "8.0"
zstd = "0.13"

# Additional dependencies for Zed crates
libc = "0.2"
nix = { version = "0.30", features = ["fs", "process", "term"] }
gpui_tokio = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "gpui_tokio" }
reqwest_client = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "reqwest_client" }
clock = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "clock" }
theme = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "theme" }
tree-sitter-rust = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "tree-sitter-rust" }
unindent = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "unindent" }
zlog = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "zlog" }
open = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "open" }
agent = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "agent" }

# Additional dependencies for nuwax_parser
sha2 = "0.10"
hex = "0.4"
walkdir = "2.5"
reqwest = { version = "0.12", features = ["stream"] }

# Additional dependencies from project crate
aho-corasick = "1.0"
askpass = "0.1"
base64 = "0.21"
circular-buffer = "0.1"
fancy-regex = "0.11"
fuzzy = "0.1"
git_hosting_providers = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "git_hosting_providers" }
globset = "0.4"
image = "0.24"
indexmap = "2.0"
pathdiff = "0.2"
postage = "0.5"
prettier = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "prettier" }
regex = "1.0"
semver = "1.0"
shellexpand = "3.0"
shlex = "1.0"
smallvec = "1.0"
snippet = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "snippet" }
snippet_provider = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "snippet_provider" }
sum_tree = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "sum_tree" }
toml = "0.8"
which = "4.0"
dap = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "dap" }
dap_adapters = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "dap_adapters" }
extension = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "extension" }
git2 = "0.18"
release_channel = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "release_channel" }

# Dev dependencies for testing
ctor = "0.5"
pretty_assertions = "1.4"
tempfile = "3.8"
rand = "0.8"