[workspace]
members = ["crates/*"]
exclude = ["tmp/*"]
resolver = "2"

[[example]]
name = "claude_code_acp_example"
path = "examples/claude_code_acp_example.rs"

[workspace.lints]
rustdoc.unbroken_backticks = "warn"
rustdoc.redundant_explicit_links = "warn"
rust.unused_lifetimes = "warn"
rust.unused_qualifications = "warn"
rust.variant_size_differences = "warn"
rust.allow_leading_underscore = "warn"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
description = "Rust-based AI agent framework"
publish = false

[workspace.dependencies]
# ACP Protocol
agent-client-protocol = "0.4"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
smol = "2.0"

# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "uuid",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json_lenient = "0.2"
schemars = { version = "1.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
env_logger = "0.11"

# OpenTelemetry
opentelemetry = "0.30"
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
tracing-opentelemetry = "0.31"
axum-tracing-opentelemetry = "0.30"

# UUID
uuid = { version = "1.0", features = ["serde", "v4", "v7"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# File system watching
notify = "8.2"

# File system utilities
tokio-fs = "0.1"
path-clean = "1.0"

# Utilities
dashmap = "6.0"
futures = "0.3"
itertools = "0.14"
bytes = "1.10"
# collections = "0.2"  # 这个包不存在


url = "2.5" # 使用 crates.io 版本


# Additional utilities
indoc = "2.0"
parking_lot = "0.12"
convert_case = "0.8"
handlebars = { version = "6.3", features = ["rust-embed"] }
rust-embed = "8.0"
zstd = "0.13"

# acp 协议
agent_client_protocol = "0.4"

# 构建工具
derive_builder = "0.20"

# Zed 核心功能依赖
libc = "0.2"
nix = { version = "0.30.1", features = ["fs", "process", "term"] }
unindent = "0.2"                                                   # 使用 crates.io 版本
open = "5.0"                                                       # 使用 crates.io 版本
git2 = "0.20.1"
tree-sitter-rust = "0.24"                                          # 使用 crates.io 版本


# Additional dependencies for nuwax_parser
sha2 = "0.10"
hex = "0.4"
walkdir = "2.5"
reqwest = { version = "0.12", features = ["stream"] }

# 项目依赖 - 保留核心功能
aho-corasick = "1.0"
# askpass = "0.1"  # 这个包不存在
base64 = "0.22"
circular-buffer = "1.2"
fancy-regex = "0.16"
fuzzy = "0.0.1"
git_hosting_providers = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "git_hosting_providers" }
globset = "0.4"
image = "0.25"
indexmap = "2.11"
pathdiff = "0.2"
postage = "0.5"
prettier = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "prettier" }
regex = "1.0"
semver = "1.0"
shellexpand = "3.1"
shlex = "1.0"
smallvec = "1.15"
snippet = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "snippet" }
snippet_provider = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "snippet_provider" }
sum_tree = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "sum_tree" }
toml = "0.9"
which = "8.0"
dap = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "dap" }
dap_adapters = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "dap_adapters" }
extension = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "extension" }
release_channel = { git = "https://github.com/zed-industries/zed.git", branch = "main", package = "release_channel" }

# Dev dependencies for testing
ctor = "0.5"
pretty_assertions = "1.4"
tempfile = "3.8"
rand = "0.9"
tokio-test = "0.4"


