[package]
name = "claude_code_acp_example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claude_code_acp_example"
path = "claude_code_acp_example.rs"

[[bin]]
name = "domestic_model_example"
path = "domestic_model_example.rs"

[[bin]]
name = "custom_model_example"
path = "custom_model_example.rs"

[[bin]]
name = "claude_acp_example"
path = "claude_acp_example.rs"

[dependencies]
acp-adapter = { path = "../crates/acp_adapter" }
claude = { path = "../crates/claude" }
agent-client-protocol = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
