[package]
name = "acp-adapter"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
# 使用 SACP (sacp::schema 模块重新导出所有协议类型)
sacp.workspace = true
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
tracing.workspace = true
uuid.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
bytes.workspace = true
thiserror.workspace = true
url.workspace = true
path-clean.workspace = true
which.workspace = true

[dev-dependencies]
tokio-test.workspace = true