[package]
name = "acp-adapter"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
# ACP Protocol - SACP (Symposium ACP) 替代官方 ACP，支持 Send trait
sacp = { workspace = true }
# ACP Protocol - 官方库（迁移过程中保留）
agent-client-protocol.workspace = true
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
tracing.workspace = true
uuid.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
bytes.workspace = true
thiserror.workspace = true
url.workspace = true
path-clean.workspace = true
which.workspace = true

[dev-dependencies]
tokio-test.workspace = true