[package]
name = "acp_thread"
version = "0.1.0"
edition.workspace = true
publish = false
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/acp_thread.rs"
doctest = false

[features]
test-support = ["dep:parking_lot"]

[dependencies]
action_log.workspace = true
agent-client-protocol.workspace = true
agent_settings.workspace = true
anyhow.workspace = true
buffer_diff.workspace = true
# collections.workspace = true  # 这个包不存在
fs.workspace = true
futures.workspace = true
itertools.workspace = true
language.workspace = true
language_model.workspace = true
markdown.workspace = true
parking_lot = { workspace = true, optional = true }
project.workspace = true
prompt_store.workspace = true
serde.workspace = true
serde_json.workspace = true
settings.workspace = true
smol.workspace = true
task.workspace = true
text.workspace = true
url.workspace = true
util.workspace = true
uuid.workspace = true
watch.workspace = true

[dev-dependencies]
env_logger.workspace = true
indoc.workspace = true
parking_lot.workspace = true
rand.workspace = true
tempfile.workspace = true
util.workspace = true
