[package]
name = "agent_config"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
description = "Agent configuration management for RCoder"
publish = false

[dependencies]
# 复用 shared_types 中的类型
shared_types = { path = "../shared_types" }

# 异步运行时
tokio = { workspace = true, features = ["full", "process"] }

# 序列化
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# 错误处理
thiserror = { workspace = true }
anyhow = { workspace = true }

# 日志
tracing = { workspace = true }

# 日期时间
chrono = { workspace = true, features = ["serde"] }

# 路径处理
path-clean = { workspace = true }

# 命令执行
which = "7.0"

# 异步 trait
async-trait = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
