[package]
name = "agent_runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "agent_runner"
path = "src/lib.rs"

[features]
default = []

# 测试相关 features
testing = ["test-blocking"]
test-blocking = []  # 启用测试用阻塞注入 (用于极端场景测试)

# OpenTelemetry 追踪 feature
otel = []  # 启用 OpenTelemetry 追踪功能

[dependencies]
# Internal crates
shared_types = { path = "../shared_types" }
agent_config = { path = "../agent_config" }
agent_abstraction = { path = "../agent_abstraction" }
acp-adapter = { path = "../acp_adapter" }
rcoder-proxy = { path = "../rcoder-proxy" }
rcoder-telemetry = { workspace = true }

clap = { workspace = true }
# ACP Protocol
agent-client-protocol = { workspace = true }
async-trait = "0.1"
parking_lot = "0.12"
tempfile = { workspace = true }

# HTTP server
axum = { workspace = true, features = ["multipart"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
futures = { workspace = true }
tokio-stream = "0.1"
async-stream = "0.3"

# gRPC Server
tonic = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9"

derive_builder = { workspace = true }

# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "fmt",
    "env-filter",
    "json",
] }
tracing-appender = "0.2"
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
dashmap = { workspace = true }
bytes = "1.0"
futures-util = { workspace = true }
piper = "0.2"
base64 = { workspace = true }
reqwest = { workspace = true }

# OpenTelemetry
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }
axum-tracing-opentelemetry = { workspace = true }

# File system
tokio-fs = { workspace = true }
path-clean = { workspace = true }

# OpenAPI documentation
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

ringbuf = { workspace = true }

# Atomic swap for sender replacement
arc-swap = "1.8"
