[package]
name = "agent_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
publish = false

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }

# HTTP server
axum = { workspace = true, features = ["http2", "query", "tracing", "ws", "multipart", "macros"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace", "compression-gzip"] }
http = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter", "json"] }

# UUID
uuid = { workspace = true, features = ["serde", "v4", "v7"] }

# Date/time
chrono = { workspace = true, features = ["serde"] }

# Utilities
dashmap = { workspace = true }
bytes = { workspace = true }

# ACP Protocol
agent-client-protocol = { workspace = true }

# Agent services
claude-code-agent = { path = "../claude-code-agent" }
codex-acp-agent = { path = "../codex-acp-agent" }

# Shared types
shared_types = { path = "../shared_types" }

# OpenAPI documentation
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

# File system
tokio-fs = { workspace = true }
path-clean = { workspace = true }

# Signal handling
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

# Async traits
async-trait = "0.1"

# Async stream
async-stream = "0.3"

# System information
sysinfo = "0.37"
nix = { version = "0.30", features = ["user"] }

# Hyper for HTTP server
hyper = { version = "1.0", features = ["full"] }


# Futures
futures-core = "0.3"
futures-sink = "0.3"

# Configuration
clap = { workspace = true, features = ["derive", "env"] }