[package]
name = "ai-agents"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "ai_agents"
path = "src/lib.rs"

[dependencies]
claude = { path = "../claude" }
codex = { path = "../codex" }
agent-client-protocol = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "time",
    "io-std",
    "io-util",
    "net",
    "process",
    "sync",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
dirs = "5.0"

[lints]
workspace = true