[package]
name = "claude-code-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "claude_code_agent"
path = "src/lib.rs"

[dependencies]
acp-adapter = { path = "../acp_adapter" }
agent-client-protocol = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "time",
    "io-std",
    "io-util",
    "net",
    "process",
    "sync",
] }
tokio-util = { workspace = true, features = ["compat"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["raw_value"] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true }
futures = { workspace = true }
semver = { workspace = true }
tempfile = { workspace = true }
which = { workspace = true }
dirs = { workspace = true }

[lints]
workspace = true
