[package]
name = "claude_integration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agent-client-protocol.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
shared_types = { path = "../shared_types" }
project_manager = { path = "../project_manager" }