[package]
name = "codex-acp-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "codex_acp_agent"
path = "src/lib.rs"


[dependencies]
codex-acp = { git = "https://github.com/soddygo/codex-acp-agent.git", branch = "feat-export-lib"}
