[package]
name = "codex-acp-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "codex_acp_agent"
path = "src/lib.rs"

[[bin]]
name = "codex-acp-agent"
path = "src/bin/codex-acp-agent.rs"


[dependencies]
# 使用自己 fork 的版本，支持 -c 参数
codex-acp = { git = "https://github.com/soddygo/codex-acp.git", branch = "feat-add-args" }
codex-core = { git = "https://github.com/zed-industries/codex", branch = "acp" }
codex-common = { git = "https://github.com/zed-industries/codex", branch = "acp", features = ["cli"] }
codex-arg0 = { git = "https://github.com/zed-industries/codex", branch = "acp" }
clap = { version = "4.0", features = ["derive"] }
piper = "0.2"

# 安装工具依赖
anyhow = "1.0"
dirs = "6.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["fs", "process"] }
tracing = "0.1"
flate2 = "1.0"
tar = "0.4"
zip = "6.0"