[package]
name = "codex-acp-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "codex_acp_agent"
path = "src/lib.rs"

[[bin]]
name = "codex-acp-agent"
path = "src/bin/codex-acp-agent.rs"


[dependencies]
# 使用自己 fork 的版本，支持 -c 参数
codex-acp.workspace = true
codex-core.workspace = true
codex-common.workspace = true
codex-arg0.workspace = true
clap = { workspace = true, features = ["derive"] }
piper.workspace = true

# 安装工具依赖
anyhow.workspace = true
dirs.workspace = true
reqwest = { workspace = true, features = ["json", "blocking"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "process"] }
tracing.workspace = true
flate2.workspace = true
tar.workspace = true
zip.workspace = true