[package]
name = "codex"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Codex dependencies
codex-cli = { git = "https://github.com/openai/codex" , branch = "main"}
codex-core = { git = "https://github.com/openai/codex" , branch = "main"}
codex-protocol = { git = "https://github.com/openai/codex" , branch = "main"}

agent-client-protocol = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "time",
    "io-std",
    "io-util",
    "net",
    "process",
    "sync",
] }
tokio-util = { workspace = true, features = ["compat"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["raw_value"] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true }

[lints]
workspace = true
